fixed admin area

--- a/plugin.xml
+++ b/plugin.xml
@@ -14,5 +14,6 @@
 	</adminLinks>
 	<pluginPrefs>
 		<pref name='enabled'>true</pref>
+		<pref name='admincss'>true</pref>
 	</pluginPrefs>
 </e107Plugin>
